modal overflow fixes

--- a/src/App.css
+++ b/src/App.css
@@ -8,20 +8,20 @@
   padding: 0;
   border-radius: 2px;
 }
-@media (min-width: 300px) {
+@media (min-width: 200px) {
   form {
     display: flex;
     flex-direction: column;
   }
   label {
-    font-size: 2rem;
+    font-size: 1.8rem;
     font-weight: bold;
   }
   input {
     margin-bottom: 50px;
     height: 50px;
     font-size: 2rem;
-    max-width: 350px;
+    max-width: 250px;
     justify-self: center;
     align-self: center;
   }
@@ -58,16 +58,18 @@
   }
   .modal {
     position: fixed;
-    top: 100%;
+    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 350px;
+    width: 300px;
     padding: 20px;
-
+    max-height: 80vh;
+    overflow-y: auto;
     background-color: white;
     color: black;
     z-index: 1000;
     font-size: 1rem;
+  
   }
 
   @keyframes spin {
